--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <span class="exchange-value">30.000</span>
             </div>
             <div class="logo-block">
-                <h3>КорреспонденТ.<i>net</i></h3>
+                <h3>Любой сайт.<i>net</i></h3>
             </div>
             <div class="search-block">
                 <a class="search__button" href="#">поиск</a>
@@ -100,7 +100,7 @@
                     <a class="nav__link" href="#">бизнес</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="#">я-корреспондент</a>
+                    <a class="nav__link" href="#">я-любой сайт</a>
                 </li>
                 <li class="nav__item">
                     <a class="nav__link" href="#">спорт</a>
@@ -125,7 +125,7 @@
     <div class="header__sub-wrapper">
         <div class="header__sub-container">
             <a class="sub__all-news" href="#">все новости раздела</a>
-            <a class="sub__fav-news" href="#">россия</a>
+            <a class="sub__fav-news" href="#">Мир</a>
         </div>
     </div>
 </header>
@@ -156,7 +156,7 @@
                         <a class="text-link" href="#">смартфона?</a>
                     </h1>
                     <p class="header__date">
-                        Корреспондент.net, 17 февраля 2020, 15:30
+                        Любой сайт.net, 17 февраля 2020, 15:30
                     </p>
                     <div class="main-news__view-info">
                         <div class="fb-social-container">
@@ -409,9 +409,6 @@
                         </div>
                     </div>
                 </div>
-                <!--                <div class="some-news__wrapper">-->
-                <!--                    <a class="some-news-link" href="#" target="_blank">читайте также >></a>-->
-                <!--                </div>-->
             </div>
             <aside class="aside-news__wrapper">
                 <div class="city-news__container">
@@ -560,7 +557,7 @@
                 </div>
                 <div class="social-links__container">
                     <div class="social-links__header">
-                        <span class="header-link">Корреспондент.нет в социальных сетях</span>
+                        <span class="header-link">Любой сайт в социальных сетях</span>
                     </div>
                     <div class="social-links__sub-header">
                         <a href="#" class="sub-header-links">facebook</a>
@@ -580,6 +577,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/13914009_10154331016435930_8458549081764036765_o.jpg"
                         />
                     </div>
@@ -606,6 +604,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/10551444_10152239819550738_2643660397784188818_o.jpg"
                         />
                     </div>
@@ -622,6 +621,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/13914009_10154331016435930_8458549081764036765_o.jpg"
                         />
                     </div>
@@ -643,6 +643,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/53833954_438918740181094_2482064490871390208_n.jpg"
                         />
                     </div>
@@ -659,9 +660,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="comment-item">ц
+                <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/70657158_1362221493934550_5209048095932809216_n.jpg"
                         />
                     </div>
@@ -679,6 +681,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/75241102_10211656617769976_5896095399885668352_n.jpg"
                         />
                     </div>
@@ -698,6 +701,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/79821124_174964566912336_5892713881939214336_o.jpg"
                         />
                     </div>
@@ -718,6 +722,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/82227549_618234278992290_8179465267600949248_o.jpg"
                         />
                     </div>
@@ -738,6 +743,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/59658074_100550941177448_5631642344936701952_o.jpg"
                         />
                     </div>
@@ -755,6 +761,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/70970727_248333449459966_2476568414496227328_o.jpg"
                         />
                     </div>
@@ -770,6 +777,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/59658074_100550941177448_5631642344936701952_o.jpg"
                         />
                     </div>
@@ -788,6 +796,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/59064665_395391891316344_8214092711280508928_o.jpg"
                         />
                     </div>
@@ -804,6 +813,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/Снимок%20экрана%202020-03-03%20в%2016.36.40.png"
                         />
                     </div>
@@ -823,6 +833,7 @@
                 <div class="comment-item">
                     <div class="comment-id__container">
                         <img class="user-photo"
+                             alt="User image"
                              src="assets/img/userAvatars/59658074_100550941177448_5631642344936701952_o.jpg"
                         />
                     </div>
