--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
             <div class="search-block">
                 <a class="search__button" href="#">поиск</a>
                 <i class="fas fa-search"></i>
+                <div class="search-block_active">
+                    <a class="search-button" href="#">Найти</a>
+                    <input type="text"
+                           name="search-input"
+                           id="search-input"
+                           placeholder="Что хотите найти?"
+                    />
+                </div>
+
             </div>
             <div class="auth-block">
                 <a class="auth__button" href="#">авторизация</a>
